[gd_scene load_steps=5 format=3 uid="uid://dm3udx5tvgc4n"]

[ext_resource type="Script" uid="uid://b2wm5jbybwxqr" path="res://classes/game_server.gd" id="1_507v1"]
[ext_resource type="Script" uid="uid://bjjrhdih67ywi" path="res://classes/pickup_server.gd" id="2_flofk"]
[ext_resource type="Script" uid="uid://b8dqrec4taeqg" path="res://classes/target_server.gd" id="3_qofpv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v0ui"]
size = Vector2(768, 256)

[node name="GameServer" type="Node2D" groups=["GameServer"]]
script = ExtResource("1_507v1")

[node name="PickupServer" type="Area2D" parent="." groups=["PickupServer"]]
collision_layer = 0
monitorable = false
script = ExtResource("2_flofk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupServer"]
position = Vector2(0, -320)
shape = SubResource("RectangleShape2D_5v0ui")

[node name="BulletServer" type="Node2D" parent="." groups=["BulletServer"]]

[node name="PlayerBulletServer" type="Node2D" parent="." groups=["PlayerBulletServer"]]

[node name="TargetServer" type="Node" parent="." groups=["TargetServer"]]
script = ExtResource("3_qofpv")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerSpawnEnd" type="Marker2D" parent="."]
position = Vector2(0, 360)

[node name="PlayerSpawnBegin" type="Marker2D" parent="."]
position = Vector2(0, 480)

[connection signal="pickup" from="." to="." method="_on_pickup"]
[connection signal="area_entered" from="PickupServer" to="PickupServer" method="_on_area_entered"]
[connection signal="area_exited" from="PickupServer" to="PickupServer" method="_on_area_exited"]
